# gen3_lite_ws

./: .gitignore  README.md
src/gen3_lite_description/: CMakeLists.txt  package.xml
src/gen3_lite_description/config/: gen3_lite_controllers.yaml  joint_limits.yaml  multi_gen3_lite_controllers.yaml
src/gen3_lite_description/launch/: display.launch.py  display.launch.xml  multi_robot.launch.py  multi_robot.launch.xml
src/gen3_lite_description/rviz/: rviz_config.rviz
src/gen3_lite_description/urdf/: gen3_lite.urdf.xacro  gen3_lite_2f_macro.xacro  gen3_lite_gz_ctrl_macro.xacro  gen3_lite_macro.xacro
src/gen3_lite_description/worlds/: multi_table.sdf  table.sdf
src/gen3_lite_examples_cpp/: CMakeLists.txt  package.xml
src/gen3_lite_examples_cpp/include/components_cpp/: dynamic_model.hpp
src/gen3_lite_examples_cpp/src/: dynamic_model.cpp  gravity_cancellation_node.cpp
src/gen3_lite_examples_py/: package.xml  setup.cfg  setup.py
src/gen3_lite_examples_py/config/: gen3_lite_kinematics.yaml
src/gen3_lite_examples_py/gen3_lite_examples_py/: differential_kinematics.py  dk_node.py  fk_node.py  forward_kinematics.py
